syntax = "proto3";

package vcassist.services.powerservice.v1;

message TermData {
  int64 start = 1;
  int64 end = 2;

  message FinalGrade {
    int32 percent = 1;
    bool in_progress_status = 2;
  }
  FinalGrade final_grade = 3;
}

message AssignmentData {
  string title = 1;
  string category = 2;
  int64 due_date = 3;
  string description = 4;
  float points_earned = 5;
  float points_possible = 6;
  bool attribute_missing = 7;
  bool attribute_late = 8;
  bool attribute_collected = 9;
  bool attribute_exempt = 10;
  bool attribute_incomplete = 11;
}

message Meeting {
  int64 start = 1;
  int64 stop = 2;
}

message CourseData {
  string guid = 1;
  string name = 2;
  string period = 3;
  string teacher_first_name = 4;
  string teacher_last_name = 5;
  string teacher_email = 6;
  string room = 7;
  repeated AssignmentData assignments = 8;
  repeated TermData terms = 9;
  repeated Meeting meetings = 10;
}

message SchoolData {
  string name = 1;
  string phone = 2;
  string fax = 3;
  string email = 4;
  string street_address = 5;
  string city = 6;
  string state = 7;
  string zip = 8;
  string country = 9;
}

message Bulletin {
  string title = 1;
  int64 start_date = 2;
  int64 end_date = 3;
  string body = 4;
}

message StudentProfile {
  string guid = 1;
  float current_gpa = 2;
  string first_name = 3;
  string last_name = 4;
  bytes photo = 5;
}

